# cartographer

./: .gitignore  CMakeLists.txt
Debug/: CMakeCache.txt  Makefile  cartographer  cmake_install.cmake
doc/arch/: software.drawio
modules/device_cfg/include/: device_cfg.h
modules/driver/include/: button.h  camera.h
modules/driver/src/: button.cpp  camera.cpp
modules/frame_manager/include/: frame_manager.h
modules/frame_manager/src/: frame_manager.cpp
modules/module/include/: module.h
modules/pattern/: observer.h
modules/pattern/include/: observer.h
modules/power_mode/include/: power_mode.h
modules/power_mode/src/: power_mode.cpp
src/: main.cpp
